--- a/front/package.json
+++ b/front/package.json
@@ -7,7 +7,7 @@
     "build": "preact build",
     "serve": "sirv build --port 8080 --cors --single",
     "dev": "preact watch",
-    "lint": "eslint src"
+    "lint": "eslint ."
   },
   "eslintConfig": {
     "extends": "preact"
@@ -16,10 +16,19 @@
     "build/*"
   ],
   "devDependencies": {
-    "eslint": "^7.17.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
+    "eslint": "^7.25.0",
+    "eslint-config-eslint": "^7.0.0",
     "eslint-config-preact": "^1.1.3",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-unused-imports": "^1.1.1",
     "preact-cli": "^3.0.0",
-    "sirv-cli": "^1.0.3"
+    "sirv-cli": "^1.0.3",
+    "typescript": "^4.2.4"
   },
   "dependencies": {
     "preact": "^10.1.0",
