--- a/front/.eslintrc.json
+++ b/front/.eslintrc.json
@@ -4,17 +4,12 @@
     "es2021": true,
     "node": true
   },
-  "settings": {
-    "react": {
-      "version": "detect"
-    }
-  },
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:react/recommended",
     "prettier",
-    "plugin:import/errors"
+    "plugin:import/errors",
+    "preact"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -25,7 +20,6 @@
   },
   "plugins": [
     "@typescript-eslint",
-    "react",
     "unused-imports",
     "import"
   ],
@@ -34,9 +28,7 @@
       "error",
       "double"
     ],
-    "react/prop-types": 0,
-    "react/jsx-uses-react": 1,
-    "react/jsx-uses-vars": 1,
+    "preact/prop-types": 0,
     "@typescript-eslint/no-inferrable-types": 0,
     "@typescript-eslint/no-unused-vars": 0,
     "@typescript-eslint/ban-ts-comment": 0,
