--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "build/*"
   ],
   "devDependencies": {
+    "@types/node": "^15.0.1",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
     "eslint": "^7.25.0",
@@ -31,6 +32,7 @@
   },
   "dependencies": {
     "preact": "^10.1.0",
-    "preact-render-to-string": "^5.1.2"
+    "preact-render-to-string": "^5.1.2",
+    "preact-router": "^3.2.1"
   }
 }
