--- a/front/package.json
+++ b/front/package.json
@@ -31,6 +31,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "modern-css-reset": "^1.4.0",
     "preact": "^10.1.0",
     "preact-render-to-string": "^5.1.2",
     "preact-router": "^3.2.1"
