--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -6,6 +6,7 @@ name: Deploy to Firebase Hosting on merge
   push:
     branches:
       - master
+    paths: front/**
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -19,6 +20,5 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_TIL_MAKOTIA }}'
           channelId: live
           projectId: til-makotia
-          working-directory: ./front
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
