--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -2,8 +2,9 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy to Firebase Hosting on PR
-'on': pull_request
-  paths: front/**
+'on':
+  pull_request:
+    paths: front/**
 jobs:
   build_and_preview:
     runs-on: ubuntu-latest
