--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -2,7 +2,9 @@
 # https://github.com/firebase/firebase-tools
 
 name: Deploy to Firebase Hosting on PR
-'on': pull_request
+'on':
+  pull_request:
+    paths: front/**
 jobs:
   build_and_preview:
     runs-on: ubuntu-latest
@@ -15,6 +17,5 @@ jobs:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_TIL_MAKOTIA }}'
           projectId: til-makotia
-          working-directory: ./front
         env:
           FIREBASE_CLI_PREVIEWS: hostingchannels
