--- a/front/package.json
+++ b/front/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "goober": "^2.0.37",
+    "hoofd": "^1.2.2",
     "modern-css-reset": "^1.4.0",
     "preact": "^10.1.0",
     "preact-render-to-string": "^5.1.2",
