--- a/front/package.json
+++ b/front/package.json
@@ -31,11 +31,11 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "goober": "^2.0.37",
     "hoofd": "^1.2.2",
     "modern-css-reset": "^1.4.0",
     "preact": "^10.1.0",
     "preact-render-to-string": "^5.1.2",
-    "preact-router": "^3.2.1"
+    "preact-router": "^3.2.1",
+    "typestyle": "^2.1.0"
   }
 }
