--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -8,3 +8,9 @@ edition = "2018"
 
 [dependencies]
 actix-web = "3"
+diesel = { version = "^1.1.0", features = ["mysql", "r2d2"] }
+r2d2 = "0.8"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+env_logger = "0.8.3"
+dotenv = "0.15.0"
