--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 
 [dependencies]
 actix-web = "3"
+actix-cors = "0.5.3"
 diesel = { version = "^1.1.0", features = ["mysql", "r2d2", "chrono"] }
 r2d2 = "0.8"
 serde = { version = "1.0", features = ["derive"] }
