--- a/front/package.json
+++ b/front/package.json
@@ -16,7 +16,7 @@
     "build/*"
   ],
   "devDependencies": {
-    "@types/node": "^15.0.1",
+    "@types/node": "^15.0.3",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
     "eslint": "^7.25.0",
@@ -27,10 +27,13 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-unused-imports": "^1.1.1",
     "preact-cli": "^3.0.0",
+    "preact-cli-plugin-env-vars": "^1.2.1",
     "sirv-cli": "^1.0.3",
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
     "hoofd": "^1.2.2",
     "modern-css-reset": "^1.4.0",
     "preact": "^10.1.0",
