--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -16,3 +16,4 @@ serde_json = "1.0"
 env_logger = "0.8.3"
 dotenv = "0.15.0"
 chrono = { version= "0.4.19", features = ["serde"]}
+jsonwebtoken = "7"
