--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -17,3 +17,5 @@ env_logger = "0.8.3"
 dotenv = "0.15.0"
 chrono = { version= "0.4.19", features = ["serde"]}
 jsonwebtoken = "7"
+actix-web-httpauth = "0.5.1"
+bcrypt = "0.8"
