--- a/front/package.json
+++ b/front/package.json
@@ -32,6 +32,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "@types/react-html-parser": "^2.0.1",
     "axios": "^0.21.1",
     "dayjs": "^1.10.4",
     "hoofd": "^1.2.2",
@@ -39,6 +40,8 @@
     "preact": "^10.1.0",
     "preact-render-to-string": "^5.1.2",
     "preact-router": "^3.2.1",
+    "react-html-parser": "^2.0.2",
+    "snarkdown": "^2.0.0",
     "typestyle": "^2.1.0"
   }
 }
