--- a/front/package.json
+++ b/front/package.json
@@ -38,6 +38,7 @@
     "hoofd": "^1.2.2",
     "modern-css-reset": "^1.4.0",
     "preact": "^10.1.0",
+    "preact-helmet": "^4.0.0-alpha-3",
     "preact-render-to-string": "^5.1.2",
     "preact-router": "^3.2.1",
     "react-html-parser": "^2.0.2",
