--- a/front/package.json
+++ b/front/package.json
@@ -42,7 +42,6 @@
     "preact-render-to-string": "^5.1.2",
     "preact-router": "^3.2.1",
     "react-html-parser": "^2.0.2",
-    "snarkdown": "^2.0.0",
-    "typestyle": "^2.1.0"
+    "snarkdown": "^2.0.0"
   }
 }
