--- a/front/package.json
+++ b/front/package.json
@@ -35,6 +35,7 @@
     "@types/react-html-parser": "^2.0.1",
     "axios": "^0.21.1",
     "dayjs": "^1.10.4",
+    "goober": "^2.0.37",
     "hoofd": "^1.2.2",
     "modern-css-reset": "^1.4.0",
     "preact": "^10.1.0",
