--- a/front/package.json
+++ b/front/package.json
@@ -35,6 +35,7 @@
     "@types/react-html-parser": "^2.0.1",
     "axios": "^0.21.1",
     "dayjs": "^1.10.4",
+    "goober": "^2.0.37",
     "hoofd": "^1.2.2",
     "modern-css-reset": "^1.4.0",
     "preact": "^10.1.0",
@@ -42,7 +43,6 @@
     "preact-render-to-string": "^5.1.2",
     "preact-router": "^3.2.1",
     "react-html-parser": "^2.0.2",
-    "snarkdown": "^2.0.0",
-    "typestyle": "^2.1.0"
+    "snarkdown": "^2.0.0"
   }
 }
